--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -25,7 +25,7 @@
     position: absolute;
     top: 50%;
 
-    display: block;
+    display: none;
 
     width: 20px;
     height: 20px;
@@ -80,6 +80,7 @@
 .slick-prev
 {
     left: -45px;
+    display: none;
 }
 [dir='rtl'] .slick-prev
 {
@@ -98,6 +99,7 @@
 .slick-next
 {
     right: -25px;
+    display: none;
 }
 [dir='rtl'] .slick-next
 {
@@ -106,11 +108,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: '';
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: '';
 }
 
 /* Dots */
